# YouTubeGPT

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  chat.ipynb  compose.yml  config.json  docker-compose.yml  main.py  pyproject.toml  renovate.json  requirements.txt  transcript.ipynb
.assets/: description.md  home.md  rag_quidelines.md
.github/: copilot-instructions.md
.github/workflows/: docker.yml  release.yml  test.yaml
.streamlit/: config.toml
docs/: README.md  models.md
modules/: chat.py  helpers.py  persistance.py  rag.py  summary.py  transcription.py  ui.py  youtube.py
pages/: chat.py  library.py  summary.py
prompts/: rag_system_prompt.txt  summary_system_prompt.txt  summary_user_prompt.txt
scripts/: chat.ipynb  transcript_len.ipynb  transcription.ipynb
tests/: test_env_config.py  test_library_page.py  test_main.py  test_ollama_helpers.py  test_persistance.py  test_summary.py
