[project]
name = "youtube-gpt"
version = "0.1.0"
description = "Streamlit app for summarizing and chatting with YouTube videos."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "langchain==1.2.7",
  "langchain-chroma==1.1.0",
  "langchain-classic==1.0.1",
  "langchain-core==1.2.8",
  "langchain-ollama==1.0.1",
  "langchain-openai==1.1.7",
  "langchain-text-splitters==1.1.0",
  "youtube-transcript-api==1.2.4",
  "streamlit==1.53.1",
  "watchdog==6.0.0",
  "peewee==3.19.0",
  "python-dotenv==1.2.1",
  "chromadb==1.4.1",
  "randomname==0.2.1",
  "tiktoken==0.12.0",
  "openai-whisper==20250625",
  "pytubefix==10.3.6",
  "ollama==0.6.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.2",
]
