[project]
name = "youtube-gpt"
version = "0.1.0"
description = "Streamlit app for summarizing and chatting with YouTube videos."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "langchain==1.2.17",
  "langchain-chroma==1.1.0",
  "langchain-classic==1.0.4",
  "langchain-core==1.3.2",
  "langchain-ollama==1.1.0",
  "langchain-openai==1.1.14",
  "langchain-text-splitters==1.1.2",
  "youtube-transcript-api==1.2.4",
  "streamlit==1.55.0",
  "watchdog==6.0.0",
  "peewee==4.0.5",
  "python-dotenv==1.2.2",
  "chromadb==1.5.8",
  "randomname==0.2.1",
  "tiktoken==0.12.0",
  "openai-whisper==20250625",
  "pytubefix==10.3.8",
  "ollama==0.6.2",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
]
